core/cu29_derive/tests/compile_fail/cu_msg/invalid_config_file.stderr
error: Failed to parse configuration: Error: Expected opening `[` at position 2:12
          context:None
 --> tests/compile_fail/cu_msg/invalid_config_file.rs:3:1
  |
3 | gen_cumsgs!("config/invalid_config.ron");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `gen_cumsgs` (in Nightly builds, run with -Z macro-backtrace for more info)
